--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Memories</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -12,9 +12,14 @@
         <h1>MEMORIES</h1>
         <img src="/images/icon.png" alt="Logo" />
       </div>
-      <div class="user">J</div>
-      <div class="title">Lovely Places</div>
-      <button>Logout</button>
+      <div class="right-icons">
+        <div class="user">J</div>
+        <div class="title">Lovely Places</div>
+        <button>Logout</button>
+      </div>
+      <div class="menu">
+          <img src="/images/menu.png" alt="">
+      </div>
     </header>
 
     <main>
@@ -194,3 +199,6 @@
           </div>
         </div>
       </div>
+    </main>
+  </body>
+</html>
