--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <button>Logout</button>
       </div>
       <div class="menu">
-          <img src="/images/menu.png" alt="">
+        <img src="/images/menu.png" alt="" />
       </div>
     </header>
 
@@ -199,6 +199,39 @@
           </div>
         </div>
       </div>
+      <form action="">
+        <div>
+          <input type="text" placeholder="Search memory" />
+          <input type="text" placeholder="Search tags" />
+          <button class="submit">SEARCH</button>
+        </div>
+        <div>
+          <h2>Create a Memory</h2>
+          <input type="text" placeholder="Title" />
+          <textarea name="" placeholder="Message" id="" rows="8"></textarea>
+          <input type="text" placeholder="Tags" />
+          <input type="file" class="file" />
+          <button class="submit">Submit</button>
+          <button class="clear">Clear</button>
+        </div>
+        <div class="page">
+          <div>
+            <img src="/images/left-arrow.png" style="width: 10px" alt="" />
+          </div>
+          <div>
+            <p>1</p>
+          </div>
+          <div>
+            <p>2</p>
+          </div>
+          <div>
+            <p>3</p>
+          </div>
+          <div>
+            <img src="/images/right-arrow.png" style="width: 10px" alt="" />
+          </div>
+        </div>
+      </form>
     </main>
   </body>
 </html>
